--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
         <button id="create-team-btn" class="btn primary">Create Team</button>
       </div>
     </div>
+<!-- In Home Screen Header -->
+<button id="leaderboard-btn" class="btn small">Leaderboard</button>
 
+<!-- Leaderboard Modal -->
+<div id="leaderboard-modal" class="modal hidden">
+  <div class="modal-content">
+    <h3>Live Leaderboard</h3>
+    <div id="leaderboard-list" class="leaderboard-list"></div>
+    <button id="close-leaderboard" class="btn small">Close</button>
+  </div>
+</div>
     <!-- SELECT TEAM SCREEN -->
     <div id="select-team-screen" class="screen hidden">
       <div class="header">
