--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NPL Fantasy 2025</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -15,7 +15,7 @@
     <div id="login-screen" class="screen">
       <div class="container">
         <h1>NPL Fantasy 2025</h1>
-        <p class="subtitle">Create your dream team!</p>
+        <p class="subtitle">Create your team!</p>
         <button id="google-signin-btn" class="btn google">
           <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" width="18" height="18" />
           Sign in with Google
@@ -45,25 +45,16 @@
       <div id="no-team" class="text-center">
         <p>No team yet</p>
         <button id="create-team-btn" class="btn primary">Create Team</button>
+        <button id="edit-team-btn" class="btn secondary hidden">Edit Team</button>
       </div>
+      <div id="timer" class="timer"></div>
     </div>
-<!-- In Home Screen Header -->
-<button id="leaderboard-btn" class="btn small">Leaderboard</button>
 
-<!-- Leaderboard Modal -->
-<div id="leaderboard-modal" class="modal hidden">
-  <div class="modal-content">
-    <h3>Live Leaderboard</h3>
-    <div id="leaderboard-list" class="leaderboard-list"></div>
-    <button id="close-leaderboard" class="btn small">Close</button>
-  </div>
-</div>
     <!-- SELECT TEAM SCREEN -->
     <div id="select-team-screen" class="screen hidden">
       <div class="header">
         <button id="back-home-btn" class="btn icon">Back</button>
-        <div class="timer" id="timer">Loading...</div>
-        <div class="transfers" id="transfers">100 transfers left</div>
+        <div class="timer" id="match-timer">Loading...</div>
       </div>
 
       <div class="stats-bar">
@@ -82,27 +73,19 @@
       </div>
 
       <div class="role-tabs" id="role-tabs"></div>
-      <div class="filters">
-        <button id="team-filter-btn" class="btn small">Filter Team</button>
-        <select id="sort-select" class="select">
-          <option value="credits">Credits</option>
-          <option value="selectedBy">Selected By</option>
-          <option value="points">Points</option>
-        </select>
-      </div>
 
       <div id="player-list" class="player-list"></div>
 
       <button id="save-team-btn" class="btn primary fixed-bottom" disabled>Save Team</button>
-    </div>
 
-    <!-- PREVIEW MODAL -->
-    <div id="preview-modal" class="modal hidden">
-      <div class="modal-content">
-        <h3>Select Captain & Vice-Captain</h3>
-        <div id="preview-players"></div>
-        <button id="continue-btn" class="btn primary" disabled>Continue</button>
-        <button id="close-preview-btn" class="btn small">Close</button>
+      <!-- PREVIEW MODAL -->
+      <div id="preview-modal" class="modal hidden">
+        <div class="modal-content">
+          <h3>Select Captain & Vice-Captain</h3>
+          <div id="preview-players"></div>
+          <button id="continue-btn" class="btn primary" disabled>Continue</button>
+          <button id="close-preview-btn" class="btn small">Close</button>
+        </div>
       </div>
     </div>
   </div>
